# vulkan-beginner

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  asan_ignorelist.txt  beginner.c  common.c  common.h  sample_dyn_render.c  sample_mesh.c  sample_minimal.c  shader_io.c  shader_io.h  vbuffer.c  vbuffer.h  vulkan.h
.github/workflows/: ci.yaml
shaders/: base.frag  base.vert  mesh.frag  mesh.geom  mesh.vert
